tests: add all tests